Updated notebook to address map visualization problem in file preview mode in Github.

--- a/Meteorite Landings Exploratory Data Analysis.ipynb
+++ b/Meteorite Landings Exploratory Data Analysis.ipynb
@@ -527,7 +527,10 @@
    "cell_type": "markdown",
    "source": [
     "#### The year with most meteorite falls was the year 1979!\n",
-    "Now we check where most meteorites tend to fall using geopandas and folium"
+    "Now we check where most meteorites tend to fall using geopandas and folium\n",
+    "\n",
+    "**For some reason the map cannot be shown in the preview section on Github, for access to it access this url:**\n",
+    "https://github.com/egaldino03/Meteorite-Landing-EDA/blob/main/Meteorite%20Landings%20Exploratory%20Data%20Analysis.ipynb"
    ],
    "metadata": {
     "collapsed": false
